Flexbox Issue: Alignment Now Working

--- a/slm-main.css
+++ b/slm-main.css
@@ -19,16 +19,22 @@ body {
       font-size: 50px;
   }
 
-  .leftcolumn {
+  .container__left {
     flex: 3;
-    flex-wrap: wrap;
   }
 
   .rightcolumn {
-    flex: 0;
+    flex: 1;
     background-color: white;
     padding-left: 20px;
+    margin-top: 1rem;
+    justify-content: right;
 
+  }
+
+  aside {
+      padding: 2rem;
+      flex: 1;
   }
 
   .row:after {
@@ -47,7 +53,9 @@ body {
     background-color: white;
     padding: 20px;
     margin-top: 20px;
-  }
+    margin-right: 7px;
+    margin-bottom: 20px;
+  } 
 
   @media screen and (max-width: 800px) {
     .leftcolumn, .rightcolumn {   
